styled and fix spacing for section, .App, and .description

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,16 @@
 .description {
   text-align: center;
+
 }
 
 .App {
   display: flex;
   justify-content: space-around;
+  padding-top: 10px;
+}
+
+section {
+  display: flex;
+  justify-content: space-around;
+  padding-top: 10px;
 }
